Added the authorization features in login and signup