@@ -18,6 +18,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableMethodSecurity
@@ -25,6 +26,10 @@ public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
+    /**
+     * Comma-separated list of allowed origins.
+     * Example: ALLOWED_ORIGINS=http://localhost:3000,https://prayagraj-travels.vercel.app
+     */
     @Value("${ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5173}")
     private String allowedOrigins;
 
@@ -40,25 +45,55 @@ public class SecurityConfig {
                 .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                        .requestMatchers("/api/auth/**", "/api/travels/health", "/api/travels/search", "/api/travels/locations/**", "/api/travels/live-location/**").permitAll()
+                        // Public auth endpoints
+                        .requestMatchers("/api/auth/**").permitAll()
+                        // Public travel endpoints
+                        .requestMatchers(
+                                "/api/travels/health",
+                                "/api/travels/search",
+                                "/api/travels/buses",
+                                "/api/travels/locations/**",
+                                "/api/travels/live-location/**"
+                        ).permitAll()
+                        // Admin-only endpoints
                         .requestMatchers("/api/admin/**").hasRole("ADMIN")
-                        .anyRequest().authenticated())
+                        // Everything else requires authentication
+                        .anyRequest().authenticated()
+                )
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
         return http.build();
     }
 
+    /**
+     * CORS configuration.
+     *
+     * <p>{@code allowCredentials(true)} is required for httpOnly cookies to be sent
+     * cross-origin. When credentials are enabled, {@code allowedOrigins} must list
+     * explicit origins — wildcards are not permitted by the CORS spec.
+     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        String[] origins = Arrays.stream(allowedOrigins.split(",")).map(String::trim).toArray(String[]::new);
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(origins));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "X-Requested-With"));
-        configuration.setExposedHeaders(Arrays.asList("Content-Type", "X-Total-Count"));
-        configuration.setAllowCredentials(false);
-        configuration.setMaxAge(3600L);
+        String[] origins = Arrays.stream(allowedOrigins.split(","))
+                .map(String::trim)
+                .filter(s -> !s.isBlank())
+                .toArray(String[]::new);
+
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowedOrigins(Arrays.asList(origins));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of(
+                "Authorization",
+                "Content-Type",
+                "Accept",
+                "X-Requested-With",
+                "Cookie"
+        ));
+        config.setExposedHeaders(List.of("Content-Type", "X-Total-Count", "Set-Cookie"));
+        config.setAllowCredentials(true);   // required for httpOnly cookie flow
+        config.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", config);
         return source;
     }
 
